--- a/css/new.css
+++ b/css/new.css
@@ -1,6 +1,18 @@
-#container {
-  max-width: 800px;
-  margin: 1em auto;
-  width: 400px;
-  height: 400px;
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  height: 100%;
+  width: 100%;
+}
+body #box {
+  height: 100%;
+  width: 100%;
+}
+body #box .head {
+  height: 50px;
+}
+body #box .main {
+  height: 50%;
 }
