--- a/stylus/new.styl
+++ b/stylus/new.styl
@@ -1,6 +1,22 @@
-#container {
-	max-width: 800px;
-	margin: 1em auto;
-    width: 400px;
-    height: 400px;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    height: 100%;
+    width: 100%;
+ 
+    #box {
+        height: 100%;
+        width: 100%;
+
+        .head{
+            height: 50px
+        }
+            
+        .main{
+            height: (100%) - 50;     
+        }
+    }   
 }
